gitops/gitlab/04-gitlab.yaml
---
## Service
kind: Service
apiVersion: v1
metadata:
  name: gitlab
  namespace: gitlab
  labels:
    app: gitlab
  #annotations:
    # 提示：请根据实际可用的ELB信息修改如下三个注解信息的值；
    #kubernetes.io/elb.class: union
    #kubernetes.io/elb.id: a27c8dfa-a0b1-4f70-8453-6d997b2959ba
    #kubernetes.io/elb.mark: '0'
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
    - name: ssh
      protocol: TCP
      port: 22
      targetPort: ssh
      nodePort: 30022
  type: NodePort
  selector:
    app: gitlab
  #type: LoadBalancer
  # 请根据ELB上绑定的实际可用EIP修改如下属性值；
  #loadBalancerIP: 122.9.71.123
  #externalTrafficPolicy: Cluster
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gitlab
  namespace: gitlab
  labels:
    app: gitlab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab
  template:
    metadata:
      name: gitlab
      labels:
        app: gitlab
    spec:
      containers:
      - name: gitlab
        image: 'sameersbn/gitlab:13.10.2'
        ports:
        - name: ssh
          containerPort: 22
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        resources: 
          requests:
            cpu: 1
            memory: 1Gi
          limits:
            cpu: 2
            memory: 4Gi
        livenessProbe:
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 300
          timeoutSeconds: 5
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 30
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        volumeMounts:
        - name: data
          mountPath: /home/git/data
        - name: localtime
          mountPath: /etc/localtime
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: gitlab
      - name: localtime
        hostPath:
          path: /etc/localtime
