gitops/gitlab/05-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab
  namespace: gitlab
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: gitlab-test.datagrand.com
    http:
      paths:
      - backend:
          serviceName: gitlab
          servicePort: 80
